# easy-drawing

./: README.md  Setup.hs  easy-drawing.cabal
Graphic/: Canvas.hs
Test/: Canvas.hs
