Name:                easy-drawing
Version:             0.1
Synopsis:            for easy drawing with haskell for absolute beginners
License:             GPL-3
License-file:        COPYING
Author:              Benjamin Weißenfels
Maintainer:          b.pixeldrama@gmail.com
Category:            Education
Build-type:          Simple
Cabal-version:       >=1.2
library
  exposed-modules:   Graphic.Canvas
  Build-Depends:     base,
                     gtk == 0.12.3,
                     cairo == 0.12.3